# Ramaria

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  Dockerfile  LICENSE  RAMARIA_创新点可行性分析_v1.0.md  RAMARIA_项目下一阶段规划报告_v1.0.md  RAMARIA_项目总体计划书.md  README.md  README_DISTRIBUTION.md  README_快速开始.md  README_快速开始（一键启动）.md  README_快速开始（从源码运行）.md  Ramaria_代码优化清单.docx  build.bat  config.py  conflict_checker.py  constants.py  database.py  docker-compose.yml  graph_builder.py  init_db.py  install.bat  install.sh  llm_client.py  logger.py  main.py  merger.py  migrate_add_emotion_fields.py  migrate_add_graph_tables.py  migrate_add_indexes.py  migrate_add_push.py  profile_manager.py  prompt_builder.py  push_scheduler.py  pyproject.toml  ramaria.spec  requirements-core.txt  requirements-dev.txt  (+10 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help_request.yml
app/: __init__.py  bundle.py  dependencies.py  main.py
app/core/: __init__.py  db_initializer.py  env_checker.py
app/routes/: __init__.py  admin.py  chat.py  graph_ctrl.py  import_ctrl.py  memory.py  router_ctrl.py  sessions.py  settings.py
app/system/: __init__.py  autostart.py  tray.py
config/: persona.toml.example
importer/: __init__.py  export.json  l1_batch.py  qq_import_cli.py  qq_importer.py  qq_parser.py
linux/: install.sh  start.sh
mac/: install.sh  start.sh
mcp_server/: __init__.py  permissions.py  server.py
mcp_server/tools/: __init__.py  read_tools.py  write_tools.py
scripts/: _runtime_hook.py  check_env.py  collect_dlls.py  emotion_migration.py  health_check.py  init_db.py  migrate_add_graph_tables.py  migrate_add_indexes.py  migrate_add_push.py  setup_db.py
src/ramaria/: __init__.py  config.py  constants.py  logger.py
src/ramaria/adapters/mcp/: __init__.py  permissions.py  server.py
src/ramaria/adapters/mcp/tools/: __init__.py  read_tools.py  write_tools.py
src/ramaria/adapters/telegram/: __init__.py  bridge.py
src/ramaria/core/: __init__.py  llm_client.py  prompt_builder.py  router.py  session_manager.py
src/ramaria/importer/: __init__.py  batch.py
src/ramaria/importer/qq/: __init__.py  importer.py  parser.py
src/ramaria/memory/: __init__.py  conflict_checker.py  decay.py  graph_builder.py  merger.py  profile_manager.py  push_scheduler.py  summarizer.py
src/ramaria/storage/: __init__.py  database.py  vector_store.py
src/ramaria/tools/: __init__.py  fs_scanner.py  hardware_monitor.py  tool_registry.py  weather.py  web_fetcher.py
static/: dashboard.html  import.html  index.html  launcher.html  loading.html  memory.html  setup.html
static/css/: animations.css  components.css  layout.css  variables.css
static/js/: api.js  app.js  state.js  ui.js
tests/: test_chroma.py  test_embedding_model.py  test_hybrid_search.py  test_qwen3_embedding.py  test_rag_pipeline.py  test_tools.py
tests/unit/storage/: test_database.py
win/: check_prerequisites.bat  check_python.bat  install.bat  install.py  start.bat  start.py
