[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramaria"
version = "0.3.6"
description = "珊瑚菌 - 本地运行的个人 AI 陪伴记忆系统"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "黎烧酒", email = "entergirl@example.com" }
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "memory",
    "personal-assistant",
    "local-llm",
    "rag",
    "knowledge-graph",
    "chatbot",
    "珊瑚菌"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "sentence-transformers>=2.0.0",
    "requests>=2.31.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "networkx>=3.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
mcp      = ["mcp>=1.0.0,<2.0.0"]
dev      = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all      = [
    "python-telegram-bot>=20.0",
    "mcp>=1.0.0,<2.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage      = "https://github.com/entergirl/Ramaria"
Repository    = "https://github.com/entergirl/Ramaria"
Documentation = "https://github.com/entergirl/Ramaria#readme"
Changelog     = "https://github.com/entergirl/Ramaria/releases"
Issues        = "https://github.com/entergirl/Ramaria/issues"

[project.scripts]
ramaria = "app.main:main"

# =============================================================================
# 临时修复（v0.3.6-hotfix）
#
# 原始问题：
#   logger.py 和 constants.py 位于项目根目录。
#   原配置 where = ["src"] 只扫描 src/ 子目录，导致这两个文件在
#   pip install -e . 后不在 Python 模块搜索路径内，运行时抛出
#   ModuleNotFoundError: No module named 'logger'
#
# 修复方案：
#   · [tool.setuptools] py-modules 显式声明根目录的两个散文件模块
#   · [tool.setuptools.packages.find] 改为从根目录扫描，include 白名单
#     精确限定 app 和 ramaria 两个包，避免把无关目录打进安装包
#   · [tool.setuptools.package-dir] 保持 ramaria -> src/ramaria 的映射，
#     确保 from ramaria.xxx import ... 的写法继续有效
#
# 后续（正式版 v0.4）：
#   将 logger.py 和 constants.py 移入 src/ramaria/，
#   将所有 from logger import ... 改为 from ramaria.logger import ...
#   届时可删除此 hotfix 注释，恢复 where = ["src"] 的简洁配置。
# =============================================================================

[tool.setuptools]
# 声明根目录的单文件模块，pip install -e . 后可直接 import logger / import constants
py-modules = ["logger", "constants"]

[tool.setuptools.packages.find]
# 从根目录扫描，而非只扫描 src/
where = ["."]
# 白名单：只打包 app 包和 ramaria 包（ramaria 通过 package-dir 映射到 src/ramaria）
include = [
    "app",
    "app.*",
    "ramaria",
    "ramaria.*",
]

[tool.setuptools.package-dir]
# ramaria 包的实际位置是 src/ramaria/，保持现有 import 路径不变
"ramaria" = "src/ramaria"

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
asyncio_mode     = "auto"
