[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramaria"
version = "0.5.0"
description = "珊瑚菌 - 本地运行的个人 AI 陪伴记忆系统"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "黎烧酒", email = "entergirl@example.com" }
]
requires-python = ">=3.10"
keywords = [
    "ai",
    "memory",
    "personal-assistant",
    "local-llm",
    "rag",
    "knowledge-graph",
    "chatbot",
    "珊瑚菌"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "sentence-transformers>=2.0.0",
    "requests>=2.31.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "networkx>=3.0",
    "python-multipart>=0.0.6",
    "tomli>=2.0.0; python_version < '3.11'",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
mcp      = ["mcp>=1.0.0,<2.0.0"]
dev      = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all      = [
    "python-telegram-bot>=20.0",
    "mcp>=1.0.0,<2.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

bundle = [
    "pywebview>=4.0",
    "pystray>=0.19",
    "Pillow>=9.0",
    "psutil>=5.9",
    "pyinstaller>=6.0",
    "pywin32>=300; sys_platform == 'win32'",
]

[project.urls]
Homepage      = "https://github.com/entergirl/Ramaria"
Repository    = "https://github.com/entergirl/Ramaria"
Documentation = "https://github.com/entergirl/Ramaria#readme"
Changelog     = "https://github.com/entergirl/Ramaria/releases"
Issues        = "https://github.com/entergirl/Ramaria/issues"

[project.scripts]
ramaria = "app.main:main"

# =============================================================================
# 包发现配置（v0.5.0 清理版）
#
# v0.3.6 中 logger.py 和 constants.py 位于项目根目录，
# 需要 py-modules 和复杂的 packages.find 白名单才能正确安装。
# v0.4.0 将两个文件迁移进 src/ramaria/，根目录不再有散文件模块，
# v0.5.0 统一版本号管理，仅在 pyproject.toml 中保留版本信息。
# 配置恢复为标准的 where=["src"] 简洁写法。
# =============================================================================

[tool.setuptools.packages.find]
# 只扫描 src/ 目录，自动发现 ramaria 包及其所有子包
where = ["src"]

[tool.setuptools.package-dir]
# ramaria 包的实际位置是 src/ramaria/
"" = "src"

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
asyncio_mode     = "auto"